--- a/bandlookmain.css
+++ b/bandlookmain.css
@@ -88,7 +88,8 @@ ul li a {
 }
 
 main {
-  padding: 1em 1.4em;
+  padding: 0em;
+  background-size: 100%;
 }
 
 .main-display {
@@ -229,9 +230,9 @@ div.container {
 
   nav {
     background: none;
-    position: absolute;
-    margin-top: 5em;
-    height: auto;
+    position: fixed;
+    margin-top: 11em;
+    height: 100%;
   }
 
   figcaption {
@@ -243,7 +244,7 @@ div.container {
     padding-top: 0;
     font-style: black;
     margin-top: 1em;
-    position: absolute;
+    position: fixed ;
   }
 
   .img-menu {
@@ -258,6 +259,7 @@ div.container {
     max-width: 300px;
 	  -webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
     transition: background 0.8s;
+    height: 100vh;
   }
 
   aside:hover{
@@ -317,7 +319,7 @@ div.container {
      }
 
   footer:hover{
-   	background: #44E863;
+   	background: #FF9F3F;;
    }
 
    .noga-item-box {
@@ -343,22 +345,16 @@ div.container {
     padding-left: 75px;
     color: black;
     width: 200px;
-    }
-
-    .meni-gumb {
-       padding: 25px;
-      padding-left: 75px;
-      color: black;
-      width: 200px;
     text-shadow: -1px 1px white;
-    }
+  }
 
-    .meni-gumb:hover{
-        color: #3eceff;
-      background: white;
+  .meni-gumb:hover{
+    color: #3eceff;
+    background: white;
     text-shadow: none;
     transition: 0.35s;
-      }
+  }
+
   .main-logo-head {
     -webkit-filter: invert(1);
     filter: invert(1);
@@ -381,69 +377,91 @@ div.container {
   }
 
   .photo{
-  display: block;
-  text-align: center;
-  margin-bottom: 0em;
-  margin-left: auto;
-  margin-right: auto;
-  width: 14.5vh;
-  min-width: 14.5vh;
-    z-index: 1000
-  position: relative;
-  border-radius: 0px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: block;
+    text-align: center;
+    margin-bottom: 0em;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1000;
+    position: relative;
+    border-radius: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+    transition: .8s ease;
+    width: 10vw;
+  }
+
+  .photo:hover {
+    filter: none;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.8), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+  div.fotka-clana {
+    padding-top: 0em;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    border-radius: 0;
+    margin-bottom: 0em;
+    background: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.0), 0 6px 20px 0 rgba(0, 0, 0, 0.0);
+    text-align: center;
+    height: 50%;
+    }
+
+  div.container {
+    text-align: center;
+    padding: 0px 0px;
+    position: fixed;
+    background: #ff1953; /* Old browsers */
+    background: -moz-linear-gradient(top, #ff1953 0%, #ff5782 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #ff1953 0%,#ff5782 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #ff1953 0%,#ff5782 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1953', endColorstr='#ff5782',GradientType=0 ); /* IE6-9 */
+    overflow: hidden;
+    width: 300px;
+    height: 0;
+    }
+
+h2.container{
+  padding: 10px;
 }
 
-div.fotka-clana {
-  padding-top: 0em;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  position: relative;
-  border-radius: 0px;
-  margin-bottom: 0em;
-  background: none;
+p{
+  margin-top: 20vh;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-shadow: -1px 1px white;
 }
 
-div.container {
-  text-align: center;
-  padding: 0px 0px;
-position: absolute;
-  bottom: 50%;
-  left: 0;
-  right: 0;
-  background: #ff1953; /* Old browsers */
-background: -moz-linear-gradient(top, #ff1953 0%, #ff5782 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #ff1953 0%,#ff5782 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #ff1953 0%,#ff5782 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1953', endColorstr='#ff5782',GradientType=0 ); /* IE6-9 */
-  overflow: hidden;
-  width: 100%;
-  height:0;
-  transition: .5s ease;
-}
+  .fotka-clana:hover .container {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 300px;
+    z-index: 50000;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    transition: 0.8s;
+  }
 
-.fotka-clana:hover .container {
-  bottom: 0;
-  height: 100%;
-}
+  .band-description {
+  	display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    max-width: 100%;
+    grid-gap: 15px;
+    background-color: none;
+    padding: 15px;
+    padding-top: 2em;
+  }
 
-.band-description {
-	display: grid;
-  grid-template-columns: auto auto auto;
-  max-width: 100%;
-  grid-gap: 15px;
-  background-color: none;
-  padding: 15px;
-}
-
-.active {
-  position: absolute;
-  display: block;
-  background: rgba(255, 255, 255, 0.5);
-  width: 100%;
-  left: 0;
-  top: 0;
-  height: 100%;
-}
+  .active {
+    position: absolute;
+    display: block;
+    background: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    left: 0;
+    top: 0;
+    height: 100%;
+  }
