--- a/contactlook.css
+++ b/contactlook.css
@@ -231,9 +231,9 @@ div.container {
 
   nav {
     background: none;
-    position: absolute;
-    margin-top: 5em;
-    height: auto;
+    position: fixed;
+    margin-top: 11em;
+    height: 100%;
   }
 
   figcaption {
@@ -245,7 +245,7 @@ div.container {
     padding-top: 0;
     font-style: black;
     margin-top: 1em;
-    position: absolute;
+    position: fixed;
 
   }
 
@@ -254,12 +254,12 @@ div.container {
   }
 
   aside{
-    background: rgba(255, 62, 143, 0.08);
+    background: rgba(255, 255, 255, 0.15);
     padding: 0;
     min-height: 100px;
-    bottom: 0;
+    margin-bottom: 0;
     max-width: 300px;
-	-webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
+    -webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
     transition: background 0.8s;
     height: 100vh;
 	  }
