--- a/eventslook.css
+++ b/eventslook.css
@@ -24,6 +24,7 @@ aside {
   grid-template-columns: auto 40px;
   padding: 2em;
 
+
 }
 
 img {
@@ -174,15 +175,29 @@ footer {
 .photo{
   display: block;
   text-align: center;
-  margin-bottom: 0em;
-  margin-left: auto;
-  margin-right: auto;
+margin-bottom: 0em;
+margin-left: auto;
+margin-right: auto;
+  width: 70%;
+  min-width: 50%;
+z-index: 1000
+position: relative;
+ border-radius: 25px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.photo-upcomming{
+  display: block;
+  text-align: center;
+margin-bottom: 0em;
+margin-left: auto;
+margin-right: auto;
   height: 50vh;
   width: auto;
-  z-index: 1000;
-  position: relative;
-  border-radius: 25px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+z-index: 1000
+position: relative;
+ border-radius: 25px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 li {
@@ -200,12 +215,34 @@ li {
   display: none;
 }
 
-div.dogodek {
-  padding-top: 2em;
+div.event-photo {
+padding-top: 2em;
   width: 80%;
+margin-left: auto;
+margin-right: auto;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+position: relative;
+border-radius: 15px;
+margin-bottom: 2em;
+background: #ff5959
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
+
+div.dogodek {
+  padding: 2em;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
-  background-color: rgba(255,87,130, 0.55);
+  background: #fff20c; /* Old browsers */
+background: -moz-linear-gradient(-45deg, #fff20c 32%, #ff9f3f 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg, #fff20c 32%,#ff9f3f 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg, #fff20c 32%,#ff9f3f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff20c', endColorstr='#ff9f3f',GradientType=1 );
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   position: relative;
   border-radius: 15px;
@@ -228,10 +265,9 @@ div.opis-dogodka {
 
   nav {
     background: none;
-    position: absolute;
+    position: fixed;
     margin-top: 5em;
     height: auto;
-
   }
 
   figcaption {
@@ -243,8 +279,7 @@ div.opis-dogodka {
     padding-top: 0;
     font-style: black;
     margin-top: 1em;
-    position: absolute;
-
+    position: fixed ;
   }
 
   .img-menu {
@@ -259,6 +294,7 @@ div.opis-dogodka {
     max-width: 300px;
 	  -webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
     transition: background 0.8s;
+
 	  }
 
     aside:hover{
@@ -325,7 +361,7 @@ div.opis-dogodka {
    }
 
    footer:hover{
- 	   background: #44E863;
+ 	   background: #FF9F3F;
    }
 
   .noga-item-box {
@@ -342,22 +378,107 @@ div.opis-dogodka {
     font-style: #FF1953;
     font-size: 1.8em;
     font-style: bold;
-    margin-top: 0;
+    margin-top: 15vh;
     max-height: 100%;
   }
 
-  .photo{
+  div.dogodek {
+    padding-top: 0em;
+    width: 30vw;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    background: -moz-linear-gradient(-45deg, rgba(255,25,83,0.95) 0%, rgba(255,25,83,0.97) 32%, rgba(255,159,63,0.99) 68%, rgba(255,255,130,0.99) 70%, rgba(255,159,63,0.99) 72%, rgba(255,255,130,0.99) 75%, rgba(255,255,130,0.99) 82%, rgba(255,159,63,0.99) 84%, rgba(255,159,63,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, rgba(255,25,83,0.95) 0%,rgba(255,25,83,0.97) 32%,rgba(255,159,63,0.99) 68%,rgba(255,255,130,0.99) 70%,rgba(255,159,63,0.99) 72%,rgba(255,255,130,0.99) 75%,rgba(255,255,130,0.99) 82%,rgba(255,159,63,0.99) 84%,rgba(255,159,63,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, rgba(255,25,83,0.95) 0%,rgba(255,25,83,0.97) 32%,rgba(255,159,63,0.99) 68%,rgba(255,255,130,0.99) 70%,rgba(255,159,63,0.99) 72%,rgba(255,255,130,0.99) 75%,rgba(255,255,130,0.99) 82%,rgba(255,159,63,0.99) 84%,rgba(255,159,63,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2ff1953', endColorstr='#ff9f3f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: relative;
+    border-radius: 15px;
+    margin-bottom: 2em;
+    padding-top: 2em;
+    }
+
+  .photo-upcomming{
     display: block;
     text-align: center;
     margin-bottom: 0em;
     margin-left: auto;
     margin-right: auto;
-    height: 50vh;
+    height: 40vh;
     width: auto;
     z-index: 1000;
     position: relative;
-    border-radius: 25px;
+    border-radius: 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    float: left;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  div.opis-dogodka {
+    text-align: center;
+    vertical-align: middle;
+    padding: 10px 20px;
+  }
+
+  .photo-grid{
+	  display: grid;
+	  grid-template-columns: auto auto auto;
+    max-width: 100%;
+    grid-gap: 15px;
+    background-color: none;
+    padding: 15px;
+  }
+
+  .photo-grid-dogodek{
+    display: grid;
+	  grid-template-columns: auto auto;
+    max-width: 100%;
+    grid-gap: 15px;
+    background-color: none;
+    padding: 15px;
+  }
+
+  .photo{
+  	display: block;
+  	text-align: center;
+  	margin-bottom: 0em;
+  	z-index: 1000
+  	position: relative;
+  	border-radius: 0px;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	-webkit-filter: grayscale(100%) opacity(50%); /* Safari 6.0 - 9.0 */
+  	filter: grayscale(100%) opacity(50%);
+  	-webkit-transition: filter 0.5s; /* For Safari 3.1 to 6.0 */
+    transition: filter 0.5s;
+	 }
+
+  .photo:hover{
+	-webkit-filter: none;
+	filter: none;
+  }
+
+  div.event-photo {
+  	width: 20vw;
+  	background-color: white;
+  	margin-left: auto;
+  	margin-right: auto;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	position: relative;
+  	border-radius: 15px;
+  	background: #CAECE9;
+  	-webkit-transition: background 0.8s; /* For Safari 3.1 to 6.0 */
+    transition: background 0.8s;
+  }
+
+  div.container {
+	text-align: center;
+	padding: 10px 20px;
+  }
+
+  div.event-photo:hover{
+	background: #ff5959;
   }
 
  .meni-gumb {
@@ -395,7 +516,5 @@ div.opis-dogodka {
     background-color: none;
     float: left;
   }
-
-
 
 }
