--- a/contactlook.css
+++ b/contactlook.css
@@ -300,9 +300,10 @@ div.container {
 
   .opis {
     padding-top: 2em;
-    padding-bottom: 2em;
+    padding-bottom: 0em;
     background: none;
     border-radius: 25px;
+	
   }
 
   .kontakt {
@@ -313,6 +314,7 @@ div.container {
     padding-bottom: 2em;
     border-radius: 25px;
     margin: 2em;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .noga-slike {
