--- a/main.css
+++ b/main.css
@@ -18,18 +18,26 @@ body {
   background-attachment: fixed;
 }
 
+@-webkit-keyframes opacity {
+    0%   { -webkit-filter: opacity(0); /* Google Chrome & Webkit Nightlies */}
+	30%  { -webkit-filter: opacity(0); /* Google Chrome & Webkit Nightlies */}
+    100% { -webkit-filter: opacity(1); /* Google Chrome & Webkit Nightlies */ }
+}
+
+
 .img-main-logo1 {
   position: relative;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  top: 50%;
+  top: -5vh;
   width: 50%;
-  margin-top: 0;
+  -webkit-animation: opacity 1s 1;
+ 
 }
 
 .overlay {
-  height: 100%;
+  height: 90%;
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -128,6 +136,8 @@ ul li a {
 	border-radius: 5px;
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.45), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
 	text-shadow: 1px 1px black;
+	filter: url(filters.svg#opacity); /* Firefox 3.5+ */
+	-webkit-animation: opacity 5s 1;
 }
 
 main {
@@ -151,8 +161,6 @@ main {
 h1 {
   margin: 0;
 }
-
-
  
   .noga-meni{
 	  display: none;
@@ -171,6 +179,7 @@ footer {
   min-width: 13em;
   background: black;
 z-index: 10001;
+ -webkit-animation: opacity 2s 1;
 }
 
 .noga-item-box {
