--- a/bandlookmain.css
+++ b/bandlookmain.css
@@ -243,7 +243,7 @@ h4 {
     margin-top: 1em;
     position: fixed ;
   }
-  
+
   .img-menu-web{
   	display: block;
     padding-left: 2em;
@@ -256,11 +256,11 @@ h4 {
 	-webkit-filter: invert(1);
 	filter: invert(1);
 	}
-  
+
   .img-menu-web {
 	  cursor: initial;
   }
-  
+
   .img-menu {
     display: none;
   }
@@ -436,25 +436,23 @@ h4 {
     text-align: center;
     padding: 0px 0px;
     position: fixed;
-    background: #ff1953; /* Old browsers */
-    background: -moz-linear-gradient(top, #ff1953 0%, #ff5782 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #ff1953 0%,#ff5782 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #ff1953 0%,#ff5782 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1953', endColorstr='#ff5782',GradientType=0 ); /* IE6-9 */
+    background: rgba(255,250,75, 1);
     overflow: hidden;
     width: 300px;
     height: 0;
+    color: rgba(62, 206, 255, 0.95);
+
     }
 
 h2{
-  text-shadow: -1px 1px white;
+  text-shadow: -1px 1px black;
 }
 
 p {
   margin-top: 20vh;
   margin-left: 30px;
   margin-right: 30px;
-  text-shadow: -1px 1px white;
+  text-shadow: 0px 0px 5px black;
   text-align: justify;
   font-size: 20px;
 }
