--- a/main.css
+++ b/main.css
@@ -33,7 +33,6 @@ body {
   top: -5vh;
   width: 50%;
   -webkit-animation: opacity 1s 1;
- 
 }
 
 .overlay {
@@ -66,10 +65,8 @@ body {
   padding-right: 0px;
   text-decoration: none;
   font-size: 36px;
-  color: white;
+  color: rgba(255,250,75, 0.95);
   display: block;
-  transition: 0.3s;
-
 }
 
 img {
@@ -98,7 +95,6 @@ nav {
   position: absolute;
   display: block;
   background: rgba(255, 255, 255, 0.95);
-
   height: 100%;
   z-index: 20000;
 }
@@ -128,17 +124,12 @@ ul li a {
 
 .meni-gumb {
 	margin: 4vh;
-	background: rgb(255,181,211); /* Old browsers */
-	background: -moz-linear-gradient(-45deg, rgba(255,181,211,1) 1%, rgba(255,87,130,1) 24%, rgba(255,87,130,1) 78%, rgba(255,122,173,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, rgba(255,181,211,1) 1%,rgba(255,87,130,1) 24%,rgba(255,87,130,1) 78%,rgba(255,122,173,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(135deg, rgba(255,181,211,1) 1%,rgba(255,87,130,1) 24%,rgba(255,87,130,1) 78%,rgba(255,122,173,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb5d3', endColorstr='#ff7aad',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	border-radius: 5px;
-    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.45), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+  background: rgba(62,206,255, 0.2);
+  border-radius: 5px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
 	text-shadow: 1px 1px black;
-	filter: url(filters.svg#opacity); /* Firefox 3.5+ */
-	-webkit-animation: opacity 5s 1;
-}
+	-webkit-animation: opacity 4s 1;
+  }
 
 main {
   padding: 1em 1.4em;
@@ -161,10 +152,6 @@ main {
 h1 {
   margin: 0;
 }
- 
-  .noga-meni{
-	  display: none;
-  }
 
 footer {
   position: fixed;
@@ -172,13 +159,12 @@ footer {
   bottom: 0;
   width: 100%;
   height: auto;
-  padding-bottom: 0;
   padding-bottom: 5px;
   padding-top: 5px;
   text-align: center;
   min-width: 13em;
   background: black;
-z-index: 10001;
+  z-index: 10001;
  -webkit-animation: opacity 2s 1;
 }
 
@@ -214,7 +200,7 @@ li {
   .overlay {overflow-y: auto;}
   .overlay a {font-size: 20px ;    font-family: 'Staatliches';
   }
- 
+
 
 }
 
@@ -227,15 +213,6 @@ li {
     width: 100%;
   }
 
-  nav {
-    background: none;
-    position: relative;
-    height: auto;
-    width: 50%;
-    margin: auto;
-    text-align: center;
-
-  }
 
   figcaption {
     display: block;
@@ -295,62 +272,74 @@ li {
   ul {
     display: block;
     position: relative !important;
-    background: none !important;
-    width: 100% !important;
     margin-top: 0;
   }
 
   .noga-slike {
-    width: 25px;
-    margin: 0;
+    width: 8em;
+    margin-left: auto;
+    margin-right: auto;
     background-color: none;
+    float: center;
+    -webkit-filter: invert(100%); /* Safari 6.0 - 9.0 */
+    filter: invert(100%);
+    }
 
-   }
 
-    .noga-meni{
-	  display: block;
-  }
-  
-  footer{
-    display: none;
-  }
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: auto;
+      padding-bottom: 5px;
+      padding-top: 5px;
+      text-align: center;
+      background: BLACK;
+      z-index: 10001;
+     -webkit-animation: opacity 4s 1;
+    }
 
-  .noga {
-    background: none;
-    position: relative;
-    left: 5vw;
-    bottom: 0;
-    padding-top: 0em;
-	  margin-left: auto;
-	  margin-right: auto;
-    width: 100%;
-
-  }
 
   .noga-item-box {
-	  background: none;
-    padding: 1em;
-	  position: relative;
+    background: none;
+    padding: 0em;
+    font-size: 4px;
     margin-left: auto;
-	  margin-right: auto;
-    margin-bottom: 2em;
-    margin-top: 2em;
-    text-align: center;
-	 }
+    margin-right: auto;
+	}
+
 
   .meni {
-    font-style: #FF1953;
-    font-size: 1.8em;
-    font-style: bold;
-    margin-top: 0;
-    max-height: 100%;
+    display: inline-flex;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    text-align: center;
+    background: none;
+    z-index: 10001;
+   -webkit-animation: opacity 6s 1;
+  }
+
+  li.meni{
+    text-align: center;
   }
 
   .meni-gumb {
     padding: 1em;
-    padding-left: 0em;
-    color: #32A5CC;
+    color: black;
     width: auto;
+    text-shadow: 1px 1px black;
+    width: 15vw;
+    background: rgba(62,206,255, 0.2);
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+  }
+
+  .meni-gumb:hover{
+    color: #3ECEFF;
+    text-shadow: none;
+    background: white;
   }
 
   .main-logo-head {
@@ -360,93 +349,53 @@ li {
     display: grid;
     align-content: right;
     margin: auto;
-  }
+
+    }
 
   .img-main-logo {
     display: none;
   }
 
   ul li a .noga-slike {
-    font-size: none;
     display: block;
-    padding: 0em 1.5em;
+    padding: 1.5em;
     background-color: none;
-    float: center;
-    margin-left: auto;
-	  margin-right: auto;
-  }
+      }
 
-  .meni {
-    font-family: 'Staatliches';
-}
 
 	.img-main-logo1 {
 	  position: relative;
 	  display: block;
 	  margin-left: auto;
 	  margin-right: auto;
-	  top: 50%;
+	  top: 20%;
 	  width: 50%;
-	  margin-top: 10%;
+	  margin-top: 2%;
 	  -webkit-transition: background-color 0.5s; /* For Safari 3.1 to 6.0 */
 		transition: background-color 0.5s;
 	}
 
-  .img-main-logo1:hover{
-  background-color: rgba(255,250,75, 0.95);
-
-  }
-
-.overlay {
-  height: 0%;
-  width: 100%;
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgba(255,250,75, 0.95);
-  overflow-y: hidden;
-  transition: 0.9s;
-}
 
 .overlay-content {
-  position: relative;
-  top: 15%;
-  width: 50%;
+  display: block;
+  position: fixed;
+  top: 60%;
+  width: 100%;
   text-align: center;
   margin-top: 0px;
   font-family: 'Staatliches';
-opacity: 0.95;
-margin-left: auto;
-margin-right: auto;
-background: none;
-}
+  opacity: 1;
+  margin-left: auto;
+  margin-right: auto;
+  background: none;
+  }
 
-.overlay a {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 0px;
-  padding-right: 0px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #FF3E8F;
-  display: block;
-  transition: 0.3s;
-}
+  .overlay a {
+    text-decoration: none;
+    color: rgba(255,250,75, 0.95);
+    display: block;
+      }
 
-.overlay a:hover, .overlay a:focus {
-  color: #3eceff;
-background: white;
-}
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-  margin: 0;
-  padding: 0;
-}
 
 @media screen and (max-height: 600px) {
   .overlay {overflow-y: auto;}
